--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <p>this is a new feature (dropdown)</p>
-<p>this is a new feature(button)</p>
+<p>this is a new feature (button)</p>
+
+<p>nothing added in feature1</p>
